uso de isBlank
Change-Id: I790ee8fb65445115c25c695a5619068572aec3aa